# AiBloodWork

./: .gitignore  .pre-commit-config.yaml  DUAL_LENS_IMPLEMENTATION_SUMMARY.md  DUAL_LENS_OPTIMIZATION_RESULTS.md  Makefile  README.md  dvc.yaml  mlflow.yaml  params.yaml  pyproject.toml  requirements-autofocus.txt  setup.cfg
configs/: global.yaml
configs/data/: images.yaml  tabular.yaml
demo_qa_results/: dual_lens_qa_details_20250919_171142.json  dual_lens_qa_details_20250919_171309.json  dual_lens_qa_summary_20250919_171142.json  dual_lens_qa_summary_20250919_171309.json
docker/: Dockerfile.serving  compose.yaml
docs/: vision_region_quickstart.md
docs/dual_lens_autofocus/: README.md  api_reference.md  deployment.md  getting_started.md  performance_profiling.md  testing_guide.md
docs/dual_lens_autofocus/examples/advanced/: 01_adaptive_mapping.py
docs/dual_lens_autofocus/examples/basic/: 01_simple_handoff.py  02_performance_comparison.py
docs/dual_lens_autofocus/examples/tutorials/: complete_integration_tutorial.py
examples/: run_anemia_classification.py  run_wbc_detection.py
qa_demo_results/: qa_report_QA_DEMO_PBS_001_1758315286_20250919_165722.json
qa_demo_results/telemetry/: autofocus_telemetry_20250919_165036.db
scripts/: autofocus.py  autofocus_demo.py  dual_lens_autofocus_demo.py  dual_lens_optimized_demo.py  generate_sample_data.py  production_autofocus_demo.py  standalone_autofocus_demo.py
src/bloodwork_ai/: __init__.py
src/bloodwork_ai/ingestion/: __init__.py  image_loader.py  tabular_loader.py
src/bloodwork_ai/preprocessing/: __init__.py  image_augment.py  image_stain_norm.py  tabular_clean.py  tabular_feature_engineering.py  time_series.py
src/bloodwork_ai/schemas/: __init__.py  label_taxonomies.py  tabular_schema.py
src/bloodwork_ai/serving/: fastapi_app.py
src/bloodwork_ai/tasks/cbc/: anemia_classifier.py
src/bloodwork_ai/utils/: __init__.py  io.py  log.py  metrics.py  seed.py
src/bloodwork_ai/vision/: __init__.py
src/bloodwork_ai/vision/autofocus/: README.md  __init__.py  api.py  blood_smear_autofocus.py  camera_interface.py  comp_photo.py  config.py  controller.py  diagnostics.py  dual_lens.py  dual_lens_camera.py  dual_lens_camera_optimized.py  dual_lens_optimized.py  dual_lens_qa.py  illumination.py  metrics.py  outlier_detection.py  parfocal_mapping_optimized.py  qa_harness.py  requirements.txt  stage_interface.py  surface.py  telemetry.py  thermal.py  validation.py
src/bloodwork_ai/vision/autofocus/stages/: gcode.py
src/bloodwork_ai/vision/autofocus/strategies/: __init__.py  coarse_to_fine.py  contrast.py
src/bloodwork_ai/vision/region/: __init__.py  config.py  detect_coarse.py  edge.py  io.py  mask_pyramid.py  plan.py  preprocess.py  qa.py  segment.py  service.py  survey.py  types.py
src/bloodwork_ai/vision/region/geometry/: __init__.py  calibration.py  mapper.py
