[metadata]
name = bloodwork-ai
version = 0.1.0
description = Multi-modal bloodwork AI platform for image and tabular data analysis
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/bloodwork-ai
project_urls =
    Bug Reports = https://github.com/yourusername/bloodwork-ai/issues
    Source = https://github.com/yourusername/bloodwork-ai
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11
install_requires =
    torch>=2.1.0
    torchvision>=0.16.0
    ultralytics>=8.0.0
    xgboost>=2.0.0
    lightgbm>=4.0.0
    scikit-learn>=1.3.0
    optuna>=3.4.0
    mlflow>=2.8.0
    dvc>=3.0.0
    fastapi>=0.104.0
    uvicorn[standard]>=0.24.0
    pydantic>=2.5.0
    pandas>=2.1.0
    numpy>=1.24.0
    albumentations>=1.3.0
    shap>=0.43.0
    grad-cam>=1.4.0
    pycocotools>=2.0.7
    matplotlib>=3.7.0
    seaborn>=0.12.0
    plotly>=5.17.0
    prometheus-client>=0.19.0
    python-multipart>=0.0.6
    python-dotenv>=1.0.0
    pyyaml>=6.0.1
    tqdm>=4.66.0
    pillow>=10.0.0
    opencv-python>=4.8.0
    scipy>=1.11.0
    imbalanced-learn>=0.11.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-mock>=3.12.0
    black>=23.0.0
    isort>=5.12.0
    ruff>=0.1.0
    mypy>=1.7.0
    pre-commit>=3.5.0

[flake8]
max-line-length = 88
extend-ignore = E203, E501, W503
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg,
    build,
    dist,
    .mypy_cache,
    .pytest_cache

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --strict-markers
    --strict-config
    --cov=src/bloodwork_ai
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
markers =
    unit: Unit tests
    integration: Integration tests
    e2e: End-to-end tests
    slow: Slow tests
